--- a/index.Rmd
+++ b/index.Rmd
@@ -8,7 +8,7 @@ documentclass: book
 bibliography: [book.bib, packages.bib]
 biblio-style: apalike
 link-citations: yes
-github-repo: 
+github-repo: https://github.com/josh-jackson/longitudinal.git
 description: Analyzing development using MLM and SEM within R
 ---
 
