--- a/index.Rmd
+++ b/index.Rmd
@@ -1,18 +1,19 @@
 --- 
-title: "Applied Longitudinal Data Analysis"
 author: "Josh Jackson"
-date: "`r Sys.Date()`"
-site: bookdown::bookdown_site
-output: bookdown::gitbook
-documentclass: book
-bibliography: [book.bib, packages.bib]
 biblio-style: apalike
-link-citations: yes
-github-repo:
-description: Analyzing development using MLM and SEM within R
+bibliography: 
+  - book.bib
+  - packages.bib
+date: "`r Sys.Date()`"
+description: "Analyzing development using MLM and SEM within R"
+documentclass: book
+github-repo: josh-jackson/longitudinal
+link-citations: true
+output: "bookdown::gitbook"
+site: "bookdown::bookdown_site"
+title: "Applied Longitudinal Data Analysis"
 ---
 
 
-# {-}
-Using R to test development questions using MLM and SEM
+
 
