--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -5,7 +5,7 @@ bibliography:
   - book.bib
   - packages.bib
 date: "`r Sys.Date()`"
-description: "Analyzing development using MLM and SEM within R"
+description: "Applied Longitudinal Data Analysis"
 documentclass: book
 github-repo: josh-jackson/longitudinal
 link-citations: true
