--- a/02-LDA-basics.Rmd
+++ b/02-LDA-basics.Rmd
@@ -3,7 +3,7 @@
 ## Motivation, terms, concepts 
 ### Why longtiduinal? 
 
-At least 5 reasons:
+At least 6 reasons:
 
 1. Identification of intraindiviaul change (and stability). Do you increase or decrease with time or age. Is this pattern monotonic? Should this best be conceptualized as a stable process or something that is more dynamic? On average how do people change? 
 
@@ -14,6 +14,8 @@ At least 5 reasons:
 4. Determinants of intraindividual change. What are the repeated experiences that can push construct X around. Do these have similar effects at all times? 
 
 5. Determinants of interindividual differences in intraindividual change. Do events, background characteristics, interventions or other between person characteristic shape why certain people change while others don't? 
+
+6. Inter-individual differences in intraindividual fluctuation and determinants of intraindividual fluctuation. Does everyone vary the same? Why are some more variable than others? 
 
 ### Types of change
 
@@ -29,21 +31,20 @@ There are many ways to think of change and stability. We will only have time to 
 
 5. Heterotypic change
 
-
 ### Between person versus within person
 
 Or in other words these are the shortened version of interindividaul differences in change versus intraindividaul differences. Refers to across people versus within a particular person. Often we are interested in both simultaneously. 
 
-Related to Fixed effects and Random effects. 
-
+Related to Fixed effects and Random effects, and with Level 1 and Level 2 (for those of you familiar with this terminology). 
 
 ### Trajectories, curves, change, growth... oh my
 
 How do we refer to 'change'? Usually it is easier to refer to pictorially or in terms of an equation. Putting a word onto it usually causes some confusion, which is why there are a lot of redundent terms in the literature. All of these might refer to the same thing when used within a model. However, the names of some models use these terms differently and thus can refer to different models or conditions that you are working with. In this class I will try to point out the important differences but you will be fine if you supplement your terms with graphs or equations.
 
-## Data structures and data analysis
 
-### MLM & SEM
+## Data analysis and data structures
+
+### Modeling frameworks: MLM & SEM
 In this class (and in the field) two primary techniques are used with longitudinal models: MLM and SEM. At some levels they are completely equivalent. At others, one is better than the other and vice versa. 
 
 MLM/HLM is a simple extension of regression. As a result it is easy to interpret and impliment. In terms of longituduinal data it is easier to run models when the time of measurement differs from person to person. For this class we will use lme4 as our MLM program but there are many others we could use e.g., nlme. 
@@ -57,14 +58,86 @@ library(tidyr)
 ```
 
 
-## Graphing
+#### meaningful time metric
+
+dates versus weeks
+```{r}
+
+```
+
+waves versus dates
+```{r}
+
+```
+
+
+
+### Graphing
 
 ```{r, eval=FALSE}
 library(ggplot2)
 ```
 
 
+## Putting it together example
 
+### a person level
+
+nonlinear smoothing
+
+```{r}
+
+```
+
+
+linear smoothing
+
+```{r}
+
+```
+
+lets look at individual level regressions
+
+
+```{r}
+library(tidyverse)
+library(broom)
+
+
+```
+
+
+### between person level
+
+spaghetti plots 
+```{r}
+
+```
+
+average trend
+
+
+## Design considerations
+
+### number of assessment waves
+
+### measuremnt reliability and validity
+
+### reliability of (rate of) change
+
+
+## Threats to validity
+
+### Missing data
+
+#### types of missing data
+#### how to handle missing data
+
+###  History 
+###  Maturation 
+###  Testing 
+###  Selection 
+###  Attrition/Mortality
 
 
 
